[package]
name = "prodex-audit-log"
version.workspace = true
edition.workspace = true
description = "Audit log helpers for prodex"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_audit_log"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["clock"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
