[package]
name = "prodex-audit-log"
version.workspace = true
edition.workspace = true
description = "Audit log helpers for prodex"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_audit_log"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
redaction = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lints]
workspace = true
