[package]
name = "prodex-caveman-assets"
version.workspace = true
edition.workspace = true
description = "Embedded Caveman plugin assets for prodex"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_caveman_assets"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["clock"] }
prodex_shared_codex_fs = { package = "prodex-shared-codex-fs", path = "../prodex-shared-codex-fs", version = "0.83.0" }
serde_json = "1.0.149"
toml = "1.1.2"
