[package]
name = "prodex-caveman-assets"
version.workspace = true
edition.workspace = true
description = "Embedded Caveman plugin assets for prodex"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_caveman_assets"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
prodex_shared_codex_fs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
