[package]
name = "prodex-cli"
version.workspace = true
edition.workspace = true
description = "CLI argument model and parsing helpers for prodex"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_cli"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
prodex-shared-types = { version = "0.154.0", path = "../prodex-shared-types" }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
