[package]
name = "prodex-cli"
version.workspace = true
edition.workspace = true
description = "CLI argument model and parsing helpers for prodex"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_cli"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
prodex_provider_core = { workspace = true }
url = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
