[package]
name = "prodex-config"
version.workspace = true
edition.workspace = true
description = "Revisioned configuration boundary primitives for Prodex"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_config"
path = "src/lib.rs"

[dependencies]
prodex_domain = { workspace = true }

[lints]
workspace = true
