[package]
name = "prodex-context"
version.workspace = true
edition.workspace = true
description = "Context audit and compression helpers for prodex"
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "prodex_context"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
terminal_ui = { package = "prodex-terminal-ui", path = "../prodex-terminal-ui" }
