[package]
name = "prodex-housekeeping"
version.workspace = true
edition.workspace = true
description = "Housekeeping helpers for prodex"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_housekeeping"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["clock"] }
prodex_core = { package = "prodex-core", path = "../prodex-core", version = "0.84.0" }
prodex_runtime_claude = { package = "prodex-runtime-claude", path = "../prodex-runtime-claude", version = "0.84.0" }
prodex_state = { package = "prodex-state", path = "../prodex-state", version = "0.84.0" }
serde_json = "1.0.149"
