[package]
name = "prodex-housekeeping"
version.workspace = true
edition.workspace = true
description = "Housekeeping helpers for prodex"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_housekeeping"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["clock"] }
prodex_core = { workspace = true }
prodex_runtime_claude = { workspace = true }
prodex_state = { workspace = true }
serde_json = "1.0.149"
