[package]
name = "prodex-proxy-config"
version.workspace = true
edition.workspace = true
description = "Upstream proxy and client configuration helpers for prodex"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls", "system-proxy", "socks"] }
