[package]
name = "prodex-quota"
version.workspace = true
edition.workspace = true
description = "Pure quota models and rendering helpers for prodex"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_quota"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["clock"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
terminal_ui = { package = "prodex-terminal-ui", path = "../prodex-terminal-ui", version = "0.85.0" }
