[package]
name = "prodex-quota"
version.workspace = true
edition.workspace = true
description = "Pure quota models and rendering helpers for prodex"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_quota"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
terminal_ui = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true
