[package]
name = "prodex-quota"
version.workspace = true
edition.workspace = true
description = "Pure quota models and rendering helpers for prodex"
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = ["base64"]

[lib]
name = "prodex_quota"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prodex_profile_identity = { workspace = true }
prodex_runtime_state = { workspace = true }
terminal_ui = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }

[lints]
workspace = true
