[package]
name = "prodex-runtime-anthropic"
version.workspace = true
edition.workspace = true
description = "Anthropic compatibility translation helpers for prodex"
license.workspace = true
repository.workspace = true

[lib]
name = "runtime_anthropic"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
