[package]
name = "prodex-runtime-broker-log"
version.workspace = true
edition.workspace = true
description = "Runtime broker log parsing and cached continuity metrics for prodex"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_runtime_broker_log"
path = "src/lib.rs"

[dependencies]
prodex_runtime_broker = { package = "prodex-runtime-broker", path = "../prodex-runtime-broker", version = "0.84.0" }
